--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,9 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "baseUrl": ".", // 경로 시작 위치를 현재 위치로 설정
+  "paths": {
+    "@/*": ["src/*"] // @/로 시작하는 경로를 src/ 경로로 설정
+  },
 }
