--- a/appspec.yml
+++ b/appspec.yml
@@ -1,9 +1,9 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: /build/
     destination: /home/ubuntu/build/
 hooks:
   AfterInstall: # 배포 후
-    - location: execute-deploy.sh
+    - location: deploy.sh
       timeout: 180
